--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,23 @@
 <resources>
     <string name="app_name">MusicList</string>
-    <string name="affirmation1">Song 1</string>
-    <string name="affirmation2">Song 2</string>
-    <string name="affirmation3">Song 3</string>
-    <string name="affirmation4">Song 4</string>
-    <string name="affirmation5">Song 5</string>
-    <string name="affirmation6">Song 6</string>
-    <string name="affirmation7">Song 7</string>
-    <string name="affirmation8">Song 8</string>
-    <string name="affirmation9">Song 9</string>
-    <string name="affirmation10">Song 10</string>
-    <string name="name1">Name 1</string>
-    <string name="name2">Name 2</string>
-    <string name="name3">Name 3</string>
-    <string name="name4">Name 4</string>
-    <string name="name5">Name 5</string>
-    <string name="name6">Name 6</string>
-    <string name="name7">Name 7</string>
-    <string name="name8">Name 8</string>
-    <string name="name9">Name 9</string>
-    <string name="name10">Name 10</string>
+    <string name="affirmation1">Group 1</string>
+    <string name="affirmation2">Group 2</string>
+    <string name="affirmation3">Group 3</string>
+    <string name="affirmation4">Group 4</string>
+    <string name="affirmation5">Group 5</string>
+    <string name="affirmation6">Group 6</string>
+    <string name="affirmation7">Group 7</string>
+    <string name="affirmation8">Group 8</string>
+    <string name="affirmation9">Group 9</string>
+    <string name="affirmation10">Group 10</string>
+    <string name="name1">Desc 1</string>
+    <string name="name2">Desc 2</string>
+    <string name="name3">Desc 3</string>
+    <string name="name4">Desc 4</string>
+    <string name="name5">Desc 5</string>
+    <string name="name6">Desc 6</string>
+    <string name="name7">Desc 7</string>
+    <string name="name8">Desc 8</string>
+    <string name="name9">Desc 9</string>
+    <string name="name10">Desc 10</string>
 </resources>
